# osmose_presets

./: .gitattributes  README.md  act.ps1  analyze_duplicates.py  checkbox.py  config.json  containers.py  containers.tcss  deact.ps1  debug_preset_selection.py  dev.sh  filter_selector.py  filter_selector_app.py  header_panel.py  install.txt  install_guide.txt  mac_install.sh  main.py  messages.py  midi_diagnostics.py  midi_player.py  midi_player_enhanced.py  midi_player_mido.py  midi_player_simple.py  midi_ports.py  nuit.ps1  nuitka-crash-report.xml  osmose_presets.py  osmose_presets.tcss  preset_data.py  pypi_win.ps1  pyproject.toml  pyproject_win.toml  requirements.txt  run.ps1  run_tests.py  test_app_startup.py  test_selection_simple.py  textual_init.ps1  vcvarsx86_arm64.bat  (+4 more)
.zed/: debug.json
docs/: DUPLICATE_ANALYSIS.md  DUPLICATE_SUMMARY.md  PHASE_1_REVIEW.md  PHASE_2_ARCHITECTURE.md  PHASE_2_COMPLETE.md  PHASE_2_MIGRATION.md  PHASE_2_PREVIEW.md  PHASE_2_SIMPLIFIED.md  PHASE_3_COMPLETE.md  PHASE_3_PREVIEW.md
src/: OsmosePresets.json  OsmosePresetsResources.txt  absolute.py  aligned_data_table.py  app.py  brilliant.py  button.py  button.tcss  chat_gpt.py  config.json  consts.py  containers2.py  containers2.tcss  convert_to_json.py  data_table_example.py  david_fokkema.py  dialogs.py  filter_selector.py  filter_selector_test.py  filters.py  flatten_presets.py  form_dims.py  header_panel.py  helper_functions.py  logtest.py  main.py  messages.py  midi_controller.py  osmose_presets.py  osmose_presets.tcss  pack_selector.py  photo-gallery.py  ports_dialog.py  (+13 more)
(+29 files in other folders)
