[project]
name = "osmose-presets"
version = "0.1.18"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Carl Caulkett", email = "carl.caulkett@gmail.com" }]
requires-python = ">=3.10"
dependencies = []

[project.scripts]
osmose-presets = "osmose_presets:main"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"
